Se agrego la funcion 'asignar_horarios_empleados' solicitada para generar el detalle de horarios de cada i-ésimo empleado

--- a/algoritmo_turnos.ipynb
+++ b/algoritmo_turnos.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,6 @@
     "\n",
     "    return inicios_turno\n",
     "\n",
-    "\n",
     "def Generar_dict_sol(Bloque_semana, fechas, sucursal, Horarios):\n",
     "    \n",
     "    solucion = {\n",
@@ -206,7 +205,6 @@
     "            h: 0 for h in solucion[sucursal][fecha][\"Personal_necesario\"]\n",
     "        }\n",
     "    return solucion \n",
-    "\n",
     "\n",
     "def crear_modelo(tipos_turnos, Bloque_semana, inicios_turno, fechas, sucursal):\n",
     "    model = pulp.LpProblem(f\"Asignacion_Turnos_Sucursal_{sucursal}\", pulp.LpMinimize)\n",
@@ -253,8 +251,6 @@
     "                x[(fecha, t, h)] = pulp.LpVariable(f\"x_{sucursal}_{fecha}_{t}_{h}\", lowBound=0, upBound=upper_bound, cat=pulp.LpInteger)\n",
     "    return model, x, emp, subcov, overcov\n",
     " \n",
-    "\n",
-    "\n",
     "def asignacion_regentes(Bloque_semana, solucion, num_regentes):\n",
     "    \"\"\"\n",
     "    Asigna los turnos fijos de los regentes y actualiza Bloque_semana y solucion.\n",
@@ -381,7 +377,6 @@
     "                    Bloque_semana[sucursal][fecha][h] -= 1  \n",
     "                solucion[sucursal][fecha][\"Empleados_asignados\"][h] += 1\n",
     "\n",
-    "\n",
     "def agregar_restricciones(Bloque_semana, model, x, emp, subcov, overcov, solucion, \n",
     "                          tipos_turnos, inicios_turno, fechas, sucursal, cost_sub, cost_over):\n",
     "    \n",
@@ -479,8 +474,6 @@
     "    #                    for h in solucion[sucursal][fecha][\"Personal_necesario\"].keys() \n",
     "    #                    if (fecha, \"T6n\", h) in x) <= 2\n",
     "    #     ), f\"Maximo_2_Turnos_T6n_{fecha}\"\n",
-    "\n",
-    "\n",
     "\n",
     "def solver_semana(Bloque_semana, Horarios, num_regentes, cost_sub, cost_over):\n",
     "    \"\"\"\n",
@@ -645,7 +638,220 @@
     "                empleados_asignados += 1\n",
     "\n",
     "    return Reporte\n",
-    "\n"
+    "\n",
+    "#Funion que genera la asginacion de horarios a los empleados, sin detalle de nombre aun.\n",
+    "\n",
+    "def asignar_horarios_empleados(solucion, num_regentes):\n",
+    "    \"\"\"\n",
+    "    Asigna los horarios semanales a los empleados minimizando el número de empleados necesarios.\n",
+    "\n",
+    "    - Primero, extrae y asigna turnos de regentes en 'control'.\n",
+    "    - Luego, recorre los turnos de 'control' de mayor demanda a menor, asignándolos a empleados existentes o creando nuevos.\n",
+    "    - Si un turno de Vendedores tiene 'empleados' > 1, se asigna uno a uno hasta agotar ese número.\n",
+    "    - Cada empleado tiene 5 turnos pendientes al crearse; en cuanto se le asigna un turno, se reduce en 1.\n",
+    "    - Un empleado no puede asignarse más de 1 turno por día ni más de 6 turnos en la semana.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    -----------\n",
+    "    solucion : dict\n",
+    "        Diccionario con la información de turnos generada por solver_semana (incluye 'Vendedores' y 'Regente_i').\n",
+    "    num_regentes : int\n",
+    "        Número de regentes a asignar (0 si no hay regentes).\n",
+    "\n",
+    "    Retorna:\n",
+    "    --------\n",
+    "    dict\n",
+    "        Diccionario con la asignación de empleados y sus horarios.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Diccionario final de empleados\n",
+    "    empleados = {}\n",
+    "    id_empleado = 1       # Contador de empleados\n",
+    "    id_turno = 1          # Contador de ID de turnos\n",
+    "\n",
+    "    sucursal = list(solucion.keys())[0]\n",
+    "    fechas = list(solucion[sucursal].keys())\n",
+    "\n",
+    "    # Copiamos la solución para ir removiendo/ajustando turnos\n",
+    "    control = {}\n",
+    "    # Copia profunda\n",
+    "    from copy import deepcopy\n",
+    "    control[sucursal] = deepcopy(solucion[sucursal])\n",
+    "\n",
+    "    # ----------------------------------------------------------------\n",
+    "    # 1. Asignar turnos de los regentes primero (si existen)\n",
+    "    # ----------------------------------------------------------------\n",
+    "    if num_regentes > 2:\n",
+    "        print(\"⚠ ADVERTENCIA: Solo se pueden asignar 2 regentes por sucursal. Se asignarán solo 2.\")\n",
+    "        num_regentes = 2\n",
+    "\n",
+    "    if num_regentes > 0:\n",
+    "        for i in range(1, num_regentes + 1):\n",
+    "            # Crear un empleado para este regente\n",
+    "            empleado_id = f\"empleado_{id_empleado}\"\n",
+    "            empleados[empleado_id] = {\n",
+    "                \"Rol\": f\"Regente_{i}\",\n",
+    "                \"turnos_pendientes\": 0,  # Los regentes ya tienen sus turnos fijos, no se calculan aquí\n",
+    "                \"Horarios\": []\n",
+    "            }\n",
+    "\n",
+    "            # Recorrer fechas y tipos de turno\n",
+    "            for fecha in fechas:\n",
+    "                for tipo_turno, lista_turnos in control[sucursal][fecha].items():\n",
+    "                    # Solo T8d o T4 para regentes\n",
+    "                    if tipo_turno in (\"T8d\", \"T4\"):\n",
+    "                        # Buscar todos los turnos del regente i\n",
+    "                        regent_shifts = [t for t in lista_turnos if t[\"empleado\"] == f\"Regente_{i}\"]\n",
+    "                        for shift in regent_shifts:\n",
+    "                            # Asignar este turno al empleado\n",
+    "                            empleados[empleado_id][\"Horarios\"].append({\n",
+    "                                \"Dia\": fecha,\n",
+    "                                \"Turno\": tipo_turno,\n",
+    "                                \"Hora_entrada\": shift[\"Hora_entrada\"],\n",
+    "                                \"Hora_salida\": shift[\"Hora_salida\"],\n",
+    "                                \"Id_turno\": id_turno\n",
+    "                            })\n",
+    "                            id_turno += 1\n",
+    "                        # Removerlos de 'control'\n",
+    "                        control[sucursal][fecha][tipo_turno] = [\n",
+    "                            x for x in lista_turnos if x[\"empleado\"] != f\"Regente_{i}\"\n",
+    "                        ]\n",
+    "\n",
+    "            id_empleado += 1\n",
+    "\n",
+    "    # ----------------------------------------------------------------\n",
+    "    # 2. Ordenar las fechas por demanda promedio (mayor a menor)\n",
+    "    # ----------------------------------------------------------------\n",
+    "   # 🔹 Cambiar la forma de ordenar las fechas según la SUMA de turnos (empleados) en cada día\n",
+    "    turnos_por_fecha = {}\n",
+    "    for fecha in fechas:\n",
+    "        total_turnos = 0\n",
+    "        # Recorrer cada tipo de turno del día\n",
+    "        for tipo_turno, lista_turnos in control[sucursal][fecha].items():\n",
+    "            if isinstance(lista_turnos, list):  # Confirmar que sea una lista de turnos\n",
+    "                for turno in lista_turnos:\n",
+    "                    total_turnos += turno[\"empleados\"]\n",
+    "        turnos_por_fecha[fecha] = total_turnos\n",
+    "\n",
+    "    # 🔹 Ordenar de mayor a menor según la suma de 'empleados' (turnos) en ese día\n",
+    "    fechas_ordenadas = sorted(turnos_por_fecha, key=turnos_por_fecha.get, reverse=True)\n",
+    "\n",
+    "\n",
+    "    # ----------------------------------------------------------------\n",
+    "    # 3. Asignar los turnos a vendedores (control ya está sin regentes)\n",
+    "    # ----------------------------------------------------------------\n",
+    "    for fecha in fechas_ordenadas:\n",
+    "        # Recorremos T8d, T7m, T6n\n",
+    "        for tipo_turno in [\"T8d\", \"T7m\", \"T6n\"]:\n",
+    "            lista_turnos = control[sucursal][fecha].get(tipo_turno, [])\n",
+    "            # Recorremos cada turno en la lista\n",
+    "            for turno in lista_turnos:\n",
+    "                if turno[\"empleado\"] == \"Vendedores\":\n",
+    "                    # Este turno puede tener 'empleados' > 1\n",
+    "                    num_req = turno[\"empleados\"]  # Cantidad de empleados requeridos\n",
+    "                    hora_ent = turno[\"Hora_entrada\"]\n",
+    "                    hora_sal = turno[\"Hora_salida\"]\n",
+    "                    #count_emps = []\n",
+    "                    for _ in range(num_req):\n",
+    "                        asignado = False\n",
+    "                        count_mismo_tipo_dict = {}\n",
+    "                        count_emps = {}\n",
+    "                        mejor_empleado = None\n",
+    "\n",
+    "                        for emp_id, datos in empleados.items():\n",
+    "                            # Filtrar por rol='Vendedor'\n",
+    "                            if not datos[\"Rol\"].startswith(\"Vendedor\"):\n",
+    "                                continue\n",
+    "                            if datos[\"turnos_pendientes\"] <= 0:\n",
+    "                                continue\n",
+    "                            # Verificar que no tenga ya un turno este día\n",
+    "                            dias_trabajados = {h[\"Dia\"] for h in datos[\"Horarios\"]}\n",
+    "                            if fecha in dias_trabajados:\n",
+    "                                continue\n",
+    "\n",
+    "                            # Para T6n, un empleado que ya tenga T8d/T7m no sirve\n",
+    "                            tipos_existentes = {h[\"Turno\"] for h in datos[\"Horarios\"]}\n",
+    "                            if tipo_turno == \"T6n\" and ((\"T8d\" in tipos_existentes or \"T7m\" in tipos_existentes)):\n",
+    "                                continue\n",
+    "\n",
+    "                            # Contar turnos del mismo tipo\n",
+    "                            count_mismo_tipo = sum(1 for h in datos[\"Horarios\"] if h[\"Turno\"] == tipo_turno)\n",
+    "                            if count_mismo_tipo > 0:\n",
+    "                                count_mismo_tipo_dict[emp_id] = count_mismo_tipo\n",
+    "                            \n",
+    "                            # Contar total de turnos\n",
+    "                            total_turnos = len(datos[\"Horarios\"])\n",
+    "                            count_emps[emp_id] = total_turnos\n",
+    "                        \n",
+    "                        #for e in count_emps:\n",
+    "                        #    print(f'{e} tiene {count_emps[e]} turnos')\n",
+    "                        \n",
+    "                        # Asignar basado en count_mismo_tipo_dict\n",
+    "                        if count_mismo_tipo_dict:\n",
+    "                            # Obtener empleado con más turnos del mismo tipo\n",
+    "                            mejor_empleado = max(count_mismo_tipo_dict.items(), key=lambda x: x[1])[0]\n",
+    "                            datos = empleados[mejor_empleado]\n",
+    "                            datos[\"Horarios\"].append({\n",
+    "                                \"Dia\": fecha,\n",
+    "                                \"Turno\": tipo_turno,\n",
+    "                                \"Hora_entrada\": hora_ent,\n",
+    "                                \"Hora_salida\": hora_sal,\n",
+    "                                \"Id_turno\": id_turno\n",
+    "                            })\n",
+    "                            datos[\"turnos_pendientes\"] -= 1\n",
+    "                            id_turno += 1\n",
+    "                            asignado = True\n",
+    "                            #print(f'Se asignó el turno {fecha, tipo_turno, hora_ent}:, {mejor_empleado}')\n",
+    "                        \n",
+    "                        elif count_emps:\n",
+    "                            # Si no hay del mismo tipo, asignar al que tenga más turnos totales\n",
+    "                            mejor_empleado = max(count_emps.items(), key=lambda x: x[1])[0]\n",
+    "\n",
+    "\n",
+    "                        if not asignado and mejor_empleado is not None:\n",
+    "                            # Asignar el turno al 'mejor_empleado' con menos turnos pendientes\n",
+    "                            datos = empleados[mejor_empleado]\n",
+    "                            datos[\"Horarios\"].append({\n",
+    "                                \"Dia\": fecha,\n",
+    "                                \"Turno\": tipo_turno,\n",
+    "                                \"Hora_entrada\": hora_ent,\n",
+    "                                \"Hora_salida\": hora_sal,\n",
+    "                                \"Id_turno\": id_turno\n",
+    "                            })\n",
+    "                            datos[\"turnos_pendientes\"] -= 1\n",
+    "                            id_turno += 1\n",
+    "                            asignado = True\n",
+    "\n",
+    "                        # 2) Si no se asignó a nadie, crear un nuevo empleado\n",
+    "                        if not asignado:\n",
+    "                            new_emp_id = f\"empleado_{id_empleado}\"\n",
+    "                            empleados[new_emp_id] = {\n",
+    "                                \"Rol\": \"Vendedor\",\n",
+    "                                \"turnos_pendientes\": 6,\n",
+    "                                \"Horarios\": []\n",
+    "                            }\n",
+    "                            empleados[new_emp_id][\"Horarios\"].append({\n",
+    "                                \"Dia\": fecha,\n",
+    "                                \"Turno\": tipo_turno,\n",
+    "                                \"Hora_entrada\": hora_ent,\n",
+    "                                \"Hora_salida\": hora_sal,\n",
+    "                                \"Id_turno\": id_turno\n",
+    "                            })\n",
+    "                            empleados[new_emp_id][\"turnos_pendientes\"] -= 1\n",
+    "                            id_turno += 1\n",
+    "                            id_empleado += 1\n",
+    "\n",
+    "    # ----------------------------------------------------------------\n",
+    "    # 4. Asignar día libre a los empleados con 6 turnos\n",
+    "    # ----------------------------------------------------------------\n",
+    "    for emp_id, datos in empleados.items():\n",
+    "        if len(datos[\"Horarios\"]) == 6:\n",
+    "            dias_ocupados = {h[\"Dia\"] for h in datos[\"Horarios\"]}\n",
+    "            dia_libre = next((f for f in fechas if f not in dias_ocupados), None)\n",
+    "            if dia_libre:\n",
+    "                datos[\"Dia_libre\"] = dia_libre\n",
+    "\n",
+    "    return empleados\n"
    ]
   },
   {
